Online-Store HTML/CSS
Completed components of project "online store" and added new component "header"

--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,135 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/styles/style.min.css">
+  <link rel="stylesheet" href="file:///C:/Users/vasia/OneDrive/%D0%A0%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D1%96%D0%BB/online-store/src/styles/style.min.css" type="text/css">
+
 </head>
 <body>
 <main>
   <div id="root">
-    <!-- Cart component -->
+    <div class="cart-container">
+    <ul class="cart-list" data-element="list">
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price">111111</div>
+      </li>
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price">111111</div>
+      </li>
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price">111111</div>
+      </li>
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price">111111</div>
+      </li>
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price" data-element="price">111111</div>
+      </li>
+      <li class="item-row" data-element="counterContainer" data-id="">
+        <div class="item-preview">
+          <img src="https://content2.rozetka.com.ua/goods/images/big_tile/163399632.jpg" alt="Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black">
+        </div>
+        <div class="item-name">
+          Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+        </div>
+        <div class="item-counter">
+          <button class="count-btn" data-counter="-1">
+            <i class="bi bi-dash-circle"></i>
+          </button>
+          <span data-element="76w0hz7015kkr9kjkav">1</span>
+          <button class="count-btn" data-counter="1">
+            <i class="bi bi-plus-circle"></i>
+          </button>
+        </div>
+        <div class="item-price">111111</div>
+      </li>
+
+    </ul>
+    <div class="footer">
+      <div class="cart-total">
+        Total:
+        <span data-element="total"></span>
+      </div>
+      <button class="order-btn os-btn-primary" data-elemet="orderBtn">Order</button>
+    </div>
+  </div>
+
+
   </div>
 </main>
 </body>
