--- a/src/components/search-box/01-css-task/index.html
+++ b/src/components/search-box/01-css-task/index.html
@@ -5,6 +5,9 @@
   <title>SearchBox component</title>
 
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/styles/style.min.css">
+  <link rel="stylesheet" href="file:///C:/Users/vasia/OneDrive/%D0%A0%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D1%96%D0%BB/online-store/src/styles/style.min.css" type="text/css">
+
 
   <style>
     .wrapper {
@@ -16,7 +19,14 @@
 <body>
 <main>
   <div class="wrapper">
-    <!-- SearchBox component -->
+    <div data-element="search">
+      <!-- Search -->
+    <form>
+<div class="os-form-input use-icon">
+  <input id="search-input" type="text" data-element="search" placeholder="Search">
+  <label class="bi bi-search input-icon" for="search-input"></label>
+</div>
+</form></div>
   </div>
 </main>
 </body>
