--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -4,18 +4,29 @@
   <meta charset="UTF-8" />
   <title>Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/src/styles/style.min.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- Card component -->
+    <div class="product-card">
+      <div class="product-img"></div>
+      <div class="product-content">
+        <div class="product-price-block">
+          <div class="product-rating">
+            <span>1.23</span>
+            <i class="bi bi-star"></i></div>
+        <div class="product-price">15999</div>
+          </div>
+        <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+        <p class="product-description">laptops</p>
+      </div>
+    <footer class="product-footer">
+      <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+    </footer>
+    </div>
   </div>
 </main>
 </body>
