--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -3,18 +3,101 @@
 <head>
   <meta charset="UTF-8" />
   <title>CardsList component</title>
+  <link rel="stylesheet" href="file:///C:/Users/vasia/OneDrive/%D0%A0%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D1%96%D0%BB/online-store/src/styles/style.min.css" type="text/css">
+  <link rel="stylesheet" href="file:///C:/Users/vasia/OneDrive/%D0%A0%D0%BE%D0%B1%D0%BE%D1%87%D0%B8%D0%B9%20%D1%81%D1%82%D1%96%D0%BB/online-store/src/components/card/01-css-task/style.css" type="text/css">
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="/src/components/card/01-css-task/style.css">
+  <link rel="stylesheet" href="/src/styles/style.min.css">
 
-  <style>
-    .wrapper {
 
-    }
-  </style>
+
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- CardsList component -->
+    <div class="product-list" data-element="body">
+      <div class="product-card">
+        <div class="product-img"></div>
+        <div class="product-content">
+          <div class="product-price-block">
+            <div class="product-rating">
+              <span>1.23</span>
+              <i class="bi bi-star"></i></div>
+          <div class="product-price">15999</div>
+            </div>
+          <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+          <p class="product-description">laptops</p>
+        </div>
+      <footer class="product-footer">
+        <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+      </footer>
+      </div>
+      <div class="product-card">
+        <div class="product-img"></div>
+        <div class="product-content">
+          <div class="product-price-block">
+            <div class="product-rating">
+              <span>1.23</span>
+              <i class="bi bi-star"></i></div>
+          <div class="product-price">15999</div>
+            </div>
+          <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+          <p class="product-description">laptops</p>
+        </div>
+      <footer class="product-footer">
+        <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+      </footer>
+      </div>
+      <div class="product-card">
+        <div class="product-img"></div>
+        <div class="product-content">
+          <div class="product-price-block">
+            <div class="product-rating">
+              <span>1.23</span>
+              <i class="bi bi-star"></i></div>
+          <div class="product-price">15999</div>
+            </div>
+          <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+          <p class="product-description">laptops</p>
+        </div>
+      <footer class="product-footer">
+        <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+      </footer>
+      </div>
+      <div class="product-card">
+        <div class="product-img"></div>
+        <div class="product-content">
+          <div class="product-price-block">
+            <div class="product-rating">
+              <span>1.23</span>
+              <i class="bi bi-star"></i></div>
+          <div class="product-price">15999</div>
+            </div>
+          <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+          <p class="product-description">laptops</p>
+        </div>
+      <footer class="product-footer">
+        <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+      </footer>
+      </div>
+      <div class="product-card">
+        <div class="product-img"></div>
+        <div class="product-content">
+          <div class="product-price-block">
+            <div class="product-rating">
+              <span>1.23</span>
+              <i class="bi bi-star"></i></div>
+          <div class="product-price">15999</div>
+            </div>
+          <h5 class="product-title">Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black</h5>
+          <p class="product-description">laptops</p>
+        </div>
+      <footer class="product-footer">
+        <button class="btn-primary" data-element="addToCartBtn" ><!--<i class="bi bi-box-seam product-shoping-bag"></i>--> Add To Cart </button>
+      </footer>
+      </div>
+
+    </div>
   </div>
 </main>
 </body>
