--- a/src/components/cards-list/01-css-task/style.css
+++ b/src/components/cards-list/01-css-task/style.css
@@ -1,1 +1,15 @@
-/* put your styles in this file */
+body{
+  display: block;
+  margin: 8px;
+}
+
+.wrapper{
+  display: block;
+}
+
+.product-list{
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-gap: 20px;
+  margin: 20px 0;
+}
