--- a/src/components/card/01-css-task/index.html
+++ b/src/components/card/01-css-task/index.html
@@ -2,21 +2,53 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Card component</title>
+  <title>HTML/CSS Card component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <style>
-    .wrapper {
-      width: 400px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- Card component -->
-  </div>
+
+    <div class="wrapper">
+
+      <div class="card_container">
+
+        <div class="card_item-photo">
+          <img src="./img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+        </div>
+
+        <div class="card_descriptin">
+
+            <div class="card-item_pr-rt">
+
+                <div class="card_rate">
+                  <span>1.23</span>
+
+                  <i class="bi bi-star"></i>
+                </div>
+
+                <div class="card_price">
+                  15999
+                </div>
+            </div>
+
+            <h5 class="card_title">
+              Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+            </h5>
+
+            <p class="card_category">
+              laptops
+            </p>
+        </div>
+
+        <div class="card_footer">
+            <button>
+              ADD TO CART
+            </button>
+      </div>
+    </div>
+
 </main>
 </body>
 </html>
