--- a/src/components/cart/01-css-task/index.html
+++ b/src/components/cart/01-css-task/index.html
@@ -4,11 +4,150 @@
   <meta charset="UTF-8" />
   <title>Cart component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
+
 <body>
 <main>
   <div id="root">
     <!-- Cart component -->
+
+      <div class="card-column">
+
+        <div class="card-container">    <!-- Card 1-->
+
+          <div class="card_item-photo">
+          <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+          </div>
+
+          <div class="item_name">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </div>
+
+          <div class="counter-amount">
+            <button class="btn-count">
+               <i class="bi bi-dash-circle"></i>
+            </button>
+            <span>1</span>
+            <button class="btn-count">
+               <i class="bi bi-plus-circle"></i>
+            </button>
+          </div>
+
+          <div>
+          15999
+          </div>
+        </div>
+
+        <div class="card-container">    <!-- Card 2-->
+
+          <div class="card_item-photo">
+          <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Ноутбук Acer Aspire 7 A715-41G-R9KP">
+          </div>
+
+          <div class="item_name">
+            Ноутбук Acer Aspire 7 A715-41G-R9KP (NH.Q8QEU.00L) Charcoal Black
+          </div>
+
+          <div class="counter-amount">
+            <button class="btn-count">
+               <i class="bi bi-dash-circle"></i>
+            </button>
+            <span>1</span>
+            <button class="btn-count">
+               <i class="bi bi-plus-circle"></i>
+            </button>
+          </div>
+
+          <div>
+          21500
+          </div>
+        </div>
+
+        <div class="card-container">    <!-- Card 3-->
+
+          <div class="card_item-photo">
+          <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Ноутбук Acer Aspire 7 A715-75G-51ZW">
+          </div>
+
+          <div class="item_name">
+            Ноутбук Acer Aspire 7 A715-75G-51ZW (NH.Q88EU.00P) Charcoal Black
+          </div>
+
+          <div class="counter-amount">
+            <button class="btn-count">
+               <i class="bi bi-dash-circle"></i>
+            </button>
+            <span>1</span>
+            <button class="btn-count">
+               <i class="bi bi-plus-circle"></i>
+            </button>
+          </div>
+
+          <div>
+          22999
+          </div>
+        </div>
+
+        <div class="card-container">    <!-- Card 4*-->
+
+          <div class="card_item-photo">
+          <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Ноутбук Acer Nitro 5 AN515-55-56WH">
+          </div>
+
+          <div class="item_name">
+           <span> Ноутбук Acer Nitro 5 AN515-55-56WH (NH.Q7PEU.00L) Obsidian Black Суперцена!!!</span>
+          </div>
+
+          <div class="counter-amount">
+            <button class="btn-count">
+               <i class="bi bi-dash-circle"></i>
+            </button>
+            <span>1</span>
+            <button class="btn-count">
+               <i class="bi bi-plus-circle"></i>
+            </button>
+          </div>
+
+          <div>
+          28999
+          </div>
+        </div>
+
+        <div class="card-container">    <!-- Card 5-->
+
+          <div class="card_item-photo">
+          <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Ноутбук Acer Aspire 7 A715-75G-57LR">
+          </div>
+
+          <div class="item_name">
+            Ноутбук Acer Aspire 7 A715-75G-57LR (NH.Q87EU.006) Charcoal Black
+          </div>
+
+          <div class="counter-amount">
+            <button class="btn-count">
+               <i class="bi bi-dash-circle"></i>
+            </button>
+            <span>1</span>
+            <button class="btn-count">
+               <i class="bi bi-plus-circle"></i>
+            </button>
+          </div>
+
+          <div>
+          22500
+          </div>
+        </div>
+
+        <div class="footer">
+            <p>Total: 11123</p>
+            <button class="btn-order">ORDER</button>
+          </div>
+      </div>
+  </div>
+
+
+
   </div>
 </main>
 </body>
