--- a/src/components/cards-list/01-css-task/index.html
+++ b/src/components/cards-list/01-css-task/index.html
@@ -4,17 +4,184 @@
   <meta charset="UTF-8" />
   <title>CardsList component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <style>
-    .wrapper {
-
-    }
-  </style>
 </head>
 <body>
 <main>
-  <div class="wrapper">
-    <!-- CardsList component -->
+  <div class="row">
+
+  <div class="col-4">
+
+    <div class="card_container">    <!-- Card 1-->
+
+      <div class="card_item-photo">
+       <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+      </div>
+      <div class="card_descriptin">
+          <div class="card-item_pr-rt">
+              <div class="card_rate">
+                    <span>1.23</span>
+
+                    <i class="bi bi-star"></i>
+
+              </div>
+              <div class="card_price">
+                15999
+              </div>
+          </div>
+          <h5 class="card_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="card_category">
+            laptops
+          </p>
+      </div>
+      <div class="card_footer">
+          <button class="add-button">
+            ADD TO CART
+          </button>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-4">
+
+    <div class="card_container">    <!-- Card 2-->
+
+      <div class="card_item-photo">
+       <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+      </div>
+      <div class="card_descriptin">
+          <div class="card-item_pr-rt">
+              <div class="card_rate">
+                    <span>1.23</span>
+
+                    <i class="bi bi-star"></i>
+
+              </div>
+              <div class="card_price">
+                15999
+              </div>
+          </div>
+          <h5 class="card_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="card_category">
+            laptops
+          </p>
+      </div>
+      <div class="card_footer">
+          <button class="add-button">
+            ADD TO CART
+          </button>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-4">
+
+    <div class="card_container">    <!-- Card 3-->
+
+      <div class="card_item-photo">
+       <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+      </div>
+      <div class="card_descriptin">
+          <div class="card-item_pr-rt">
+              <div class="card_rate">
+                    <span>1.23</span>
+
+                    <i class="bi bi-star"></i>
+
+              </div>
+              <div class="card_price">
+                15999
+              </div>
+          </div>
+          <h5 class="card_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="card_category">
+            laptops
+          </p>
+      </div>
+      <div class="card_footer">
+          <button class="add-button">
+            ADD TO CART
+          </button>
+      </div>
+    </div>
+
+  </div>
+  <div class="col-4">
+    <div class="card_container">    <!-- Card 4-->
+
+      <div class="card_item-photo">
+       <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+      </div>
+      <div class="card_descriptin">
+          <div class="card-item_pr-rt">
+              <div class="card_rate">
+                    <span>1.23</span>
+
+                    <i class="bi bi-star"></i>
+
+              </div>
+              <div class="card_price">
+                15999
+              </div>
+          </div>
+          <h5 class="card_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="card_category">
+            laptops
+          </p>
+      </div>
+      <div class="card_footer">
+          <button class="add-button">
+            ADD TO CART
+          </button>
+      </div>
+    </div>
+  </div>
+
+    <div class="col-4">
+    <div class="card_container">    <!-- Card 5-->
+
+      <div class="card_item-photo">
+       <img src="/src/components/card/01-css-task/img/A315-57G-336G.png" alt="Acer Aspire 3 A315-57G-336G">
+      </div>
+      <div class="card_descriptin">
+          <div class="card-item_pr-rt">
+              <div class="card_rate">
+                    <span>1.23</span>
+
+                    <i class="bi bi-star"></i>
+
+              </div>
+              <div class="card_price">
+                15999
+              </div>
+          </div>
+          <h5 class="card_title">
+            Ноутбук Acer Aspire 3 A315-57G-336G (NX.HZREU.01S) Charcoal Black
+          </h5>
+          <p class="card_category">
+            laptops
+          </p>
+      </div>
+      <div class="card_footer">
+          <button class="add-button">
+            ADD TO CART
+          </button>
+      </div>
+    </div>
+  </div>
+
+  </div>
+</div>
+
   </div>
 </main>
 </body>
