--- a/src/components/cart/01-css-task/style.css
+++ b/src/components/cart/01-css-task/style.css
@@ -1,2 +1,92 @@
-/* put your styles in this file */
-/*@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";*/
+@import "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css";
+
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap');
+html,
+body {
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+}
+
+*, :after, :before {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  color: #2C2C2C;
+}
+
+.card-column {
+  width:800px;
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(79, 205, 209);
+  margin: 100px auto;
+}
+
+.card-container {
+  background: #FFFFFF;
+  box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.133);
+  border-radius: 4px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 15px 15px 0px 15px;
+  padding: 15px;
+}
+
+img {
+  height: 40px;
+}
+
+.item_name {
+  font-size: 1rem;
+  text-align: left;
+  padding: 0 10px;
+}
+
+.counter-amount {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.btn-count {
+  padding: 1px 8px;
+}
+
+.footer {
+  align-items: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.btn-order {
+  margin: 0 auto;
+  display: block;
+  font-size: 1rem;
+  border-radius: 4px;
+  background-color: #7e72f2;
+  color: #fff;
+  border: none;
+  width: 250px;
+  transition: .3s;
+  padding: 8px 12px;
+  margin-bottom: 20px;
+}
+
+.btn-order:hover {
+  background: #6f60f1;
+  cursor: pointer;
+}
+button {
+  display: inline-block;
+  border: none;
+  font: inherit;
+  color: inherit;
+  background-color: transparent;
+}
