--- a/src/components/filters-list/01-css-task/index.html
+++ b/src/components/filters-list/01-css-task/index.html
@@ -8,14 +8,31 @@
   <style>
     .wrapper {
       width: 400px;
-      margin: 100px auto;
+      margin: 80px auto;
     }
   </style>
 </head>
 <body>
 <main>
   <div class="wrapper">
-    <!-- FiltersList component -->
+    <!-- FiltersList component-->
+
+      <form class="side-filter-form">
+
+          <h3 class="side-filter-title">Category</h3>
+
+          <div class="checkbox-form">
+                <input type="checkbox" class="check">
+                <label for="check">Cell phones</label>
+          </div>
+
+          <div class="checkbox-form">
+            <input type="checkbox" class="check">
+            <label>Computers & Tables</label>
+          </div>
+
+      </form>
+
   </div>
 </main>
 </body>
