--- a/src/components/pagination/01-css-task/index.html
+++ b/src/components/pagination/01-css-task/index.html
@@ -2,21 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Pagination component</title>
+  <title>HTML/CSS Pagination component</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
-  <style>
-    .wrapper {
-      width: 800px;
-      margin: 100px auto;
-    }
-  </style>
 </head>
 <body>
+
 <main>
   <div class="wrapper">
     <!-- Pagination component -->
+
+        <ul class="pagination_box">
+
+          <li a href="#" class="page-box page-previous">
+            <i class="bi bi-chevron-left"></i>
+          </li>
+          <li a href="#" class="page-box page-number active">1</li>
+          <li a href="#" class="page-box page-number">2</li>
+          <li a href="#" class="page-box page-number">3</li>
+          <li a href="#" class="page-box page-number">4</li>
+          <li a href="#" class="page-box page-number">5</li>
+          <li a href="#" class="page-box page-number">6</li>
+          <li a href="#" class="page-box page-number">7</li>
+          <li a href="#" class="page-box page-number">8</li>
+          <li a href="#" class="page-box page-number">9</li>
+          <li a href="#" class="page-box page-number">10</li>
+          <li a href="#" class="page-box page-number">11</li>
+          <li a href="#" class="page-box page-number">12</li>
+          <li a href="#" class="page-box page-next">
+            <i class="bi bi-chevron-right"></i>
+          </li>
+
+        </ul>
+
   </div>
 </main>
+
 </body>
 </html>
