--- a/src/components/pagination/01-css-task/style.css
+++ b/src/components/pagination/01-css-task/style.css
@@ -1,3 +1,67 @@
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css?family=Montserrat:100,100i,200,200i,300,400&display=swap');
 
-/* put your styles in this file */
+body {
+  font-family: Montserrat, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
+.wrapper {
+  margin: 100px auto;
+  width: 790px;
+  height: 205px;
+  color: #2C2C2C;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  background: #FFFFFF;
+  border: 1px solid #000000;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.pagination_box {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+  .page-box {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background:  #EDEDED;
+    display: flex;
+    align-items: center;
+    transition: .3s;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+  }
+
+  .page-number {
+    display: flex;
+    justify-content: center;
+  }
+
+  .page-previous {
+    display: flex;
+    justify-content: center;
+    margin-right: 15px;
+  }
+
+  .page-next {
+    display: flex;
+    justify-content: center;
+    margin-left: 15px;
+}
+
+  .page-box:hover,
+  .active {
+    background: #7E72F2
+}
+
